# NeoRadiant

./: .gitignore  CMakeLists.txt  Doxyfile  HellForge.sln  NeoRadiant.sln  README.md  config.h.in  install.cmake
.github/: README.md
.github/workflows/: appimage.yml  flatpak.yml  linux.yml  nightly.yml  release.yml  (+1 more)
doc/: CMakeLists.txt  manual.adoc  scriptreference.adoc
icons/: render.sh
include/: i18n.h  iautosaver.h  ibrush.h  iclipboard.h  icommandsystem.h  ideclmanager.h  idecltypes.h  ieditstopwatch.h  ifilter.h  iimage.h  iinteractiveview.h  ikeyvaluestore.h  ilogwriter.h  imapformat.h  imapinfofile.h  imessagebus.h  imodelcache.h  imodelsurface.h  imodule.h  imousetool.h  iorthoview.h  iradiant.h  irender.h  irendersystemfactory.h  iscatter.h  iscenegraphfactory.h  iscript.h  iscriptinterface.h  iselectiontest.h  ishaderlayer.h  ishaders.h  ivertexpaintable.h  precompiled_interfaces.h  precompiled_main.h  precompiled_render_interfaces.h  version.h
install/: colours.xml  commandsystem.xml  input.xml  io.github.friskthefallenhuman.neoradiant.desktop  io.github.friskthefallenhuman.neoradiant.desktop.in  io.github.friskthefallenhuman.neoradiant.metainfo.xml  menu.xml  user.xml
libs/: GameConfigUtil.h  entitylib.h  gamelib.h
plugins/script/: CMakeLists.txt  LuaHelper.h  LuaModule.cpp  LuaModule.h  PythonConsoleWriter.h  PythonModule.cpp  PythonModule.h  SceneNodeBuffer.h  ScriptCommand.cpp  ScriptCommand.h  ScriptModule.cpp  ScriptingSystem.cpp  ScriptingSystem.h  lua_impl.cpp  precompiled.h
plugins/script/interfaces/: AasFileInterface.cpp  AasFileInterface.h  BrushInterface.cpp  BrushInterface.h  CameraInterface.cpp  CameraInterface.h  CommandSystemInterface.cpp  CommandSystemInterface.h  DeclarationManagerInterface.cpp  DeclarationManagerInterface.h  DialogInterface.cpp  DialogInterface.h  EClassInterface.cpp  EClassInterface.h  EntityInterface.cpp  EntityInterface.h  FileSystemInterface.cpp  FileSystemInterface.h  FxManagerInterface.cpp  FxManagerInterface.h  GameInterface.cpp  GameInterface.h  GridInterface.cpp  GridInterface.h  LayerInterface.cpp  LayerInterface.h  MapInterface.cpp  MapInterface.h  MathInterface.cpp  MathInterface.h  ModelInterface.cpp  ModelInterface.h  PatchInterface.cpp  PatchInterface.h  RadiantInterface.cpp  RadiantInterface.h  RegistryInterface.cpp  RegistryInterface.h  SceneGraphInterface.cpp  SceneGraphInterface.h  (+12 more)
plugins/sound/: CMakeLists.txt  OggFileLoader.h  SoundManager.cpp  SoundPlayer.cpp  sound.cpp  stbvorbis_impl.c
radiant/: CMakeLists.txt  NeoRadiant.rc  RadiantApp.cpp  darkradiant.rc  main.cpp
radiantcore/: CMakeLists.txt  Radiant.cpp
test/: CMakeLists.txt  KeyCode.cpp  PatchSewing.cpp  Settings.cpp  TerrainSculpt.cpp  TestOrthoViewManager.cpp  TestOrthoViewManager.h  VertexPaint.cpp
(+422 files in other folders)
